--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,13 @@ ul{
     max-width: 1050px;
     width: 90%;
 }
+.blog-box-container2{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    margin-top: 50px;
+    max-width: 580px;
+    width: 90%;
+}
 .blog-box{
     max-width: 100%;/*350px*/
     width: 100%;
